--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,6 +15,10 @@ form {
     margin-bottom: 20vh;
     max-width: 600px;
     text-align: center;
+    
+}
+form svg{
+    color: #950740;
 }
 label {
     display: block;
@@ -33,7 +37,7 @@ input {
     max-width: 500px;
     margin: 0 auto;
     padding: 1rem;
-    color: rgb(245, 237, 237);
+    color: #950740;
     font-family: Candara;
     font-size: 2rem;
     font-weight: 400;
