--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,7 @@ form {
     border-radius: 5px;
     padding: 2rem;
     margin-bottom: 20vh;
+    width: 100%;
     max-width: 600px;
     text-align: center;
     
